--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <h1>Select an option</h1>
         <button onclick="select(1)">Send a message to an unsaved number</button><br>
-        <button onclick="select(2)">Type and send a message to an unsaved number</button><br>
+        <!-- <button onclick="select(2)">Type and send a message to an unsaved number</button><br> -->
         <button onclick="select(3)">Type and send a message to multipe people</button><br>
     </div>
     <div id="-1" style="display: none;">
